--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+
 body {
-  background-color: #999999;
+  background-color: #599771;
   color: #dddddd;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Tahoma, Helvetica, sans-serif;
   margin: 10% 20%;
 }
+
+
+
+.top-stuff {
+  text-align: center;
+}
+
+
 
 .exp-header {
     text-align: center;
@@ -11,4 +20,22 @@ body {
     border-top: 1px solid #dddddd;
     border-bottom: 1px solid #dddddd;
     background-color: rgba(0,0,0, 0.2)
+}
+
+
+
+h1 {
+  color: pink;
+  font-size: 45px;
+}
+
+h2{
+  text-align: center;
+  color: pink;
+ 
+}
+
+h3{
+  color: pink;
+  font-size: 25px;
 }
