--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   background-color: #599771;
   color: #dddddd;
@@ -6,14 +7,20 @@ body {
 }
 
 
-
 .top-stuff {
   text-align: center;
 }
 
 
 img {
-  border: 10px solid green;
+  border: 15px solid #dddddd;
+  width: 275px;
+  opacity: .3;
+  transition: opacity 250ms;
+}
+
+img:hover {
+  opacity: 1;
 }
 
 .exp-header {
@@ -23,6 +30,9 @@ img {
     border-bottom: 1px solid #dddddd;
     background-color: rgba(0,0,0, 0.2)
 }
+
+
+
 
 
 
@@ -41,3 +51,20 @@ h3{
   color: pink;
   font-size: 25px;
 }
+
+h4{
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+h5{
+  margin-top: 1px;
+  margin-bottom: 5px;
+}
+
+h6 {
+  margin-top: 1px;
+}
+
+
+
